--- a/render.yaml
+++ b/render.yaml
@@ -11,3 +11,9 @@ services:
         value: 3.11.0
       - key: FLASK_ENV
         value: production
+      - key: DATA_DIR
+        value: /data
+    disk:
+      name: whack-data
+      mountPath: /data
+      sizeGB: 1
