--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
 Flask==3.0.0
-pandas==2.1.4
-numpy==1.26.2
 gunicorn==21.2.0
-flask-cors==4.0.0
 psycopg2-binary==2.9.9
-sqlalchemy==2.0.23
-termcolor==3.1.0
+SQLAlchemy==2.0.23
